--- a/webtimer.css
+++ b/webtimer.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Roboto';
-    src: "./fonts/RobotoMono-Bold.ttf";
+    src: url("./fonts/RobotoMono-Bold.ttf");
 }
 
 body {
